# paperless-lexoffice-middleware

./: .dockerignore  .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: connections.py  connectors.py  logs.py  mappings.py  webhooks.py  workflows.py
backend/app/connectors/: base.py  lexoffice.py  paperless.py
backend/app/engine/: actions.py  executor.py  scheduler.py  triggers.py
backend/app/models/: __init__.py  connector.py  log.py  mapping.py  workflow.py
backend/app/schemas/: common.py  connector.py  workflow.py
backend/tests/: test_connectors.py
frontend/: .dockerignore  Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  MermaidViewer.tsx  WorkflowCard.tsx  WorkflowDesigner.tsx
frontend/src/pages/: Connections.tsx  Dashboard.tsx  Logs.tsx  WorkflowNew.tsx  Workflows.tsx
frontend/src/styles/: globals.css
nginx/: nginx.conf
